gap fix

--- a/01-Omnifood-Desktop/css/style.css
+++ b/01-Omnifood-Desktop/css/style.css
@@ -304,6 +304,7 @@
   font-size: 1.8rem;
   display: flex;
   align-items: center;
+  gap: 1.6rem;
 }
 
 .list-icon {
